--- a/src/features/chat/ui/Chat.module.css
+++ b/src/features/chat/ui/Chat.module.css
@@ -1,7 +1,48 @@
+.container {
+  background-color: #ff5263;
+  margin-top: 40px;
+  padding: 25px;
+  border-radius: 20px;
+}
+
 .chatContainer {
-  background: #ff5263;
+  background: #fac1c7;
   padding: 15px;
   border-radius: 15px;
   margin: 20px;
-  width: 30%;
+}
+
+.messageNick {
+  padding: 10px;
+}
+
+.messageText {
+  background-color: #a291f4;
+  padding: 10px;
+  border-radius: 15px;
+}
+
+.input {
+  margin-bottom: 10px;
+  margin-right: 10px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.button {
+  padding: 10px 20px;
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #45a049;
 }
